# sazed

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chat.py  development_plan.md  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  db.py  dependencies.py  main.py
app/agent/: client.py  loop.py  memory.py  session.py  think_loop.py  tools.py
app/routers/: audit.py  chat.py  conversations.py  finance.py  health.py  kb.py  memory.py  think.py  tools.py
docs/: architecture.md
mermaid-architecture/: README.md  architecture-detailed.md  architecture-overview.md
