[tool.poetry]
name = "sazed"
version = "0.1.0"
description = "Personal AI agent — orchestrates tools via the api-gateway"
authors = ["Pryce Tharpe"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.7.0"
httpx = "^0.28.0"
anthropic = "^0.49.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
